Tango/DLL Files/TANGO DLL for Visual Studio VC++6.0 (32 Bit)/Tango_DLL.h


TANGO_API LS_SetDigitalOutputs (int lValue);

TANGO_API LS_SetDigitalOutputsE (int lValue);

TANGO_API LS_GetDigitalInputsE (int *plValue);

TANGO_API LS_SetAxisDirection (int lXD, int lYD, int lZD, int lAD);

TANGO_API LS_SetCalibrateDir (int lXD, int lYD, int lZD, int lAD);

TANGO_API LS_LStepSave (void);

TANGO_API LS_SetBPZ (int lAValue);

TANGO_API LS_SetBPZTrackballFactor (double dAValue);

TANGO_API LS_SetBPZTrackballBackLash (double dX, double dY, double dZ, double dR);

TANGO_API LS_SetBPZJoyspeed (int lAPar, double dAValue);

TANGO_API LS_SetJoystickWindow (int lAValue);

TANGO_API LS_SetCurrentDelay (int lX, int lY, int lZ, int lR);

TANGO_API LS_MoveEx (double dX, double dY, double dZ, double dR, BOOL bRelative, BOOL bWait, int lAxisCount);

TANGO_API LS_WaitForAxisStop (int lAFlags, int lATimeoutValue, BOOL *pbATimeout);

TANGO_API LS_SetProcessMessagesProc (void* pProc);

TANGO_API LS_SendStringPosCmd (char *pcStr, char *pcRet, int lMaxLen, BOOL bReadLine, int lTimeOut);

TANGO_API LS_SetWriteLogTextFN (BOOL bAWriteLogText, char *pcALogFN);

TANGO_API LS_EnableCommandRetry (BOOL bAValue);

TANGO_API LS_SetXYAxisComp (int lValue);

TANGO_API LS_GetVersionStrDet (char *pcVersDet, int lMaxLen);

TANGO_API LS_SetCommandTimeout (int lAtoRead, int lAtoMove, int lAtoCalibrate);

TANGO_API LS_SetExtValue (int lAName, int lAValue);

TANGO_API LS_FlushBuffer (int lAValue);

TANGO_API LS_GetEEPRomValue (byte Offset, byte *pValue);

TANGO_API LS_SetEEPRomValue (byte Offset, byte Value);

TANGO_API LS_GetXYAxisComp (int *plValue);

TANGO_API LS_GetDimensions (int *plXD, int *plYD, int *plZD, int *plAD);

TANGO_API LS_GetPitch (double *pdX, double *pdY, double *pdZ, double *pdA);

TANGO_API LS_GetGear (double *pdX, double *pdY, double *pdZ, double *pdA);

TANGO_API LS_GetVel (double *pdX, double *pdY, double *pdZ, double *pdA);

TANGO_API LS_GetAccel (double *pdX, double *pdY, double *pdZ, double *pdA);

TANGO_API LS_SetVelFac (double dX, double dY, double dZ, double dR);

TANGO_API LS_GetVelFac (double *pdX, double *pdY, double *pdZ, double *pdR);

TANGO_API LS_GetSpeedPoti (BOOL *pbSpePoti);

TANGO_API LS_GetMotorCurrent (double *pdX, double *pdY, double *pdZ, double *pdA);

TANGO_API LS_GetReduction (double *pdX, double *pdY, double *pdZ, double *pdA);

TANGO_API LS_GetCurrentDelay (int *plX, int *plY, int *plZ, int *plR);

TANGO_API LS_SetOutFuncLev (double dX, double dY, double dZ, double dR);

TANGO_API LS_GetOutFuncLev (double *pdX, double *pdY, double *pdZ, double *pdR);

TANGO_API LS_GetActiveAxes (int *plFlags);

TANGO_API LS_GetAxisDirection (int *plXD, int *plYD, int *plZD, int *plAD);

TANGO_API LS_GetCalibOffset (double *pdX, double *pdY, double *pdZ, double *pdR);

TANGO_API LS_GetRMOffset (double *pdX, double *pdY, double *pdZ, double *pdR);

TANGO_API LS_GetCalibrateDir (int *plXD, int *plYD, int *plZD, int *plAD);

TANGO_API LS_SetCalibBackSpeed (int lSpeed);

TANGO_API LS_GetCalibBackSpeed (int *plSpeed);

TANGO_API LS_SetRefSpeed (int lSpeed);

TANGO_API LS_GetRefSpeed (int *plSpeed);

TANGO_API LS_SetPowerAmplifier (BOOL bAmplifier);

TANGO_API LS_GetPowerAmplifier (BOOL *pbAmplifier);

TANGO_API LS_SetMotorTablePatch (BOOL bActive);

TANGO_API LS_GetMotorTablePatch (BOOL *pbActive);

TANGO_API LS_SetJoystickFilter (BOOL bActive);

TANGO_API LS_GetJoystickFilter (BOOL *pbActive);

TANGO_API LS_SetStopPolarity (BOOL bHighActiv);

TANGO_API LS_GetStopPolarity (BOOL *pbHighActiv);

TANGO_API LS_SetVLevel (int lVRegion, double dDownLevel, double dUppLevel);

TANGO_API LS_GetVLevel (int lVRegion, double *pdDownLevel, double *pdUppLevel);

TANGO_API LS_SetStopAccel (double dXD, double dYD, double dZD, double dAD);

TANGO_API LS_GetStopAccel (double *pdXD, double *pdYD, double *pdZD, double *pdAD);

TANGO_API LS_GetVersionStrInfo (char *pcVersInfo, int lMaxLen);

TANGO_API LS_GetStatusLimit (char *pcLimit, int lMaxLen);

TANGO_API LS_GetSecurityErr (DWORD *pdwValue);

TANGO_API LS_GetSecurityStatus (DWORD *pdwValue);

TANGO_API LS_GetDelay (int *plDelay);

TANGO_API LS_GetDistance (double *pdX, double *pdY, double *pdZ, double *pdR);

TANGO_API LS_ClearPos (int lFlags);

TANGO_API LS_SetDigJoySpeed (double dX, double dY, double dZ, double dR);

TANGO_API LS_GetDigJoySpeed (double *pdX, double *pdY, double *pdZ, double *pdR);

TANGO_API LS_GetJoystickDir (int *plXD, int *plYD, int *plZD, int *plRD);

TANGO_API LS_GetJoystick (BOOL *pbJoystickOn, BOOL *pbManual, BOOL *pbPositionCount, BOOL *pbEncoder);

TANGO_API LS_GetJoystickWindow (int *plAValue);

TANGO_API LS_GetHandWheel (BOOL *pbHandWheelOn, BOOL *pbPositionCount, BOOL *pbEncoder);

TANGO_API LS_GetBPZ (int *plAValue);

TANGO_API LS_GetBPZTrackballFactor (double *pdAValue);

TANGO_API LS_GetBPZTrackballBackLash (double *pdX, double *pdY, double *pdZ, double *pdR);

TANGO_API LS_GetBPZJoyspeed (int lAPar, double *pdAValue);

TANGO_API LS_GetLimitControl (int lAxis, BOOL *pbActive);

TANGO_API LS_SetAutoLimitAfterCalibRM (int lFlags);

TANGO_API LS_GetAutoLimitAfterCalibRM (int *plFlags);

TANGO_API LS_GetSwitchPolarity (int *plXP, int *plYP, int *plZP, int *plRP);

TANGO_API LS_GetSwitchActive (int *plXA, int *plYA, int *plZA, int *plRA);

TANGO_API LS_GetTVRMode (int *plXT, int *plYT, int *plZT, int *plRT);

TANGO_API LS_GetFactorTVR (double *pdX, double *pdY, double *pdZ, double *pdR);

TANGO_API LS_SetTVROutMode (int lXT, int lYT, int lZT, int lRT);

TANGO_API LS_GetTVROutMode (int *plXT, int *plYT, int *plZT, int *plRT);

TANGO_API LS_SetTVROutResolution (int lX, int lY, int lZ, int lR);

TANGO_API LS_GetTVROutResolution (int *plX, int *plY, int *plZ, int *plR);

TANGO_API LS_SetTVROutPitch (double dX, double dY, double dZ, double dR);

TANGO_API LS_GetTVROutPitch (double *pdX, double *pdY, double *pdZ, double *pdR);