Tango/DLL Examples/Visual_Basic/SourceCode/Tango.vb

    Declare Function LS_SetAxisDirection Lib "Tango_dll.dll" (ByVal lXD As Integer, ByVal lYD As Integer, ByVal lZD As Integer, ByVal lAD As Integer) As Integer
    Declare Function LS_SetCalibrateDir Lib "Tango_dll.dll" (ByVal lXD As Integer, ByVal lYD As Integer, ByVal lZD As Integer, ByVal lAD As Integer) As Integer
    Declare Function LS_LStepSave Lib "Tango_dll.dll" () As Integer
    Declare Function LS_SetBPZ Lib "Tango_dll.dll" (ByVal lAValue As Integer) As Integer
    Declare Function LS_SetBPZTrackballFactor Lib "Tango_dll.dll" (ByVal dAValue As Double) As Integer
    Declare Function LS_SetBPZTrackballBackLash Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
    Declare Function LS_SetBPZJoyspeed Lib "Tango_dll.dll" (ByVal lAPar As Integer, ByVal dAValue As Double) As Integer
    Declare Function LS_SetJoystickWindow Lib "Tango_dll.dll" (ByVal lAValue As Integer) As Integer
    Declare Function LS_SetCurrentDelay Lib "Tango_dll.dll" (ByVal lX As Integer, ByVal lY As Integer, ByVal lZ As Integer, ByVal lR As Integer) As Integer
    Declare Function LS_MoveEx Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double, ByVal bRelative As Integer, ByVal bWait As Integer, ByVal lAxisCount As Integer) As Integer
    Declare Function LS_WaitForAxisStop Lib "Tango_dll.dll" (ByVal lAFlags As Integer, ByVal lATimeoutValue As Integer, ByRef pbATimeout As Integer) As Integer
    Declare Function LS_SetProcessMessagesProc Lib "Tango_dll.dll" (ByVal Proc As Object) As Integer
    Declare Function LS_SendStringPosCmd Lib "Tango_dll.dll" (ByVal pcStr As String, ByVal pcRet As String, ByVal lMaxLen As Integer, ByVal bReadLine As Integer, ByVal lTimeOut As Integer) As Integer
    Declare Function LS_SetDigitalOutputs Lib "Tango_dll.dll" (ByVal lValue As Integer) As Integer
    Declare Function LS_SetWriteLogTextFN Lib "Tango_dll.dll" (ByVal bAWriteLogText As Integer, ByVal pcALogFN As String) As Integer
    Declare Function LS_SetDigitalOutputsE Lib "Tango_dll.dll" (ByVal lValue As Integer) As Integer
    Declare Function LS_GetDigitalInputsE Lib "Tango_dll.dll" (ByRef plValue As Integer) As Integer
    Declare Function LS_EnableCommandRetry Lib "Tango_dll.dll" (ByVal bAValue As Integer) As Integer
    Declare Function LS_SetXYAxisComp Lib "Tango_dll.dll" (ByVal lValue As Integer) As Integer
    Declare Function LS_GetVersionStrDet Lib "Tango_dll.dll" (ByVal pcVersDet As String, ByVal lMaxLen As Integer) As Integer
    Declare Function LS_SetCommandTimeout Lib "Tango_dll.dll" (ByVal lAtoRead As Integer, ByVal lAtoMove As Integer, ByVal lAtoCalibrate As Integer) As Integer
    Declare Function LS_SetExtValue Lib "Tango_dll.dll" (ByVal lAName As Integer, ByVal lAValue As Integer) As Integer
    Declare Function LS_FlushBuffer Lib "Tango_dll.dll" (ByVal lAValue As Integer) As Integer
    Declare Function LS_GetEEPRomValue Lib "Tango_dll.dll" (ByVal Offset As Object, ByRef pValue As Object) As Integer
    Declare Function LS_SetEEPRomValue Lib "Tango_dll.dll" (ByVal Offset As Object, ByVal Value As Object) As Integer
    Declare Function LS_GetXYAxisComp Lib "Tango_dll.dll" (ByRef plValue As Integer) As Integer
    Declare Function LS_GetDimensions Lib "Tango_dll.dll" (ByRef plXD As Integer, ByRef plYD As Integer, ByRef plZD As Integer, ByRef plAD As Integer) As Integer
    Declare Function LS_GetPitch Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdA As Double) As Integer
    Declare Function LS_GetGear Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdA As Double) As Integer
    Declare Function LS_GetVel Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdA As Double) As Integer
    Declare Function LS_GetAccel Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdA As Double) As Integer
    Declare Function LS_SetVelFac Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
    Declare Function LS_GetVelFac Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
    Declare Function LS_GetSpeedPoti Lib "Tango_dll.dll" (ByRef pbSpePoti As Integer) As Integer
    Declare Function LS_GetMotorCurrent Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdA As Double) As Integer
    Declare Function LS_GetReduction Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdA As Double) As Integer
    Declare Function LS_GetCurrentDelay Lib "Tango_dll.dll" (ByRef plX As Integer, ByRef plY As Integer, ByRef plZ As Integer, ByRef plR As Integer) As Integer
    Declare Function LS_SetOutFuncLev Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
    Declare Function LS_GetOutFuncLev Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
    Declare Function LS_GetActiveAxes Lib "Tango_dll.dll" (ByRef plFlags As Integer) As Integer
    Declare Function LS_GetAxisDirection Lib "Tango_dll.dll" (ByRef plXD As Integer, ByRef plYD As Integer, ByRef plZD As Integer, ByRef plAD As Integer) As Integer
    Declare Function LS_GetCalibOffset Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
    Declare Function LS_GetRMOffset Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
    Declare Function LS_GetCalibrateDir Lib "Tango_dll.dll" (ByRef plXD As Integer, ByRef plYD As Integer, ByRef plZD As Integer, ByRef plAD As Integer) As Integer
    Declare Function LS_SetCalibBackSpeed Lib "Tango_dll.dll" (ByVal lSpeed As Integer) As Integer
    Declare Function LS_GetCalibBackSpeed Lib "Tango_dll.dll" (ByRef plSpeed As Integer) As Integer
    Declare Function LS_SetRefSpeed Lib "Tango_dll.dll" (ByVal lSpeed As Integer) As Integer
    Declare Function LS_GetRefSpeed Lib "Tango_dll.dll" (ByRef plSpeed As Integer) As Integer
    Declare Function LS_SetPowerAmplifier Lib "Tango_dll.dll" (ByVal bAmplifier As Integer) As Integer
    Declare Function LS_GetPowerAmplifier Lib "Tango_dll.dll" (ByRef pbAmplifier As Integer) As Integer
    Declare Function LS_SetMotorTablePatch Lib "Tango_dll.dll" (ByVal bActive As Integer) As Integer
    Declare Function LS_GetMotorTablePatch Lib "Tango_dll.dll" (ByRef pbActive As Integer) As Integer
    Declare Function LS_SetJoystickFilter Lib "Tango_dll.dll" (ByVal bActive As Integer) As Integer
    Declare Function LS_GetJoystickFilter Lib "Tango_dll.dll" (ByRef pbActive As Integer) As Integer
    Declare Function LS_SetStopPolarity Lib "Tango_dll.dll" (ByVal bHighActiv As Integer) As Integer
    Declare Function LS_GetStopPolarity Lib "Tango_dll.dll" (ByRef pbHighActiv As Integer) As Integer
    Declare Function LS_SetVLevel Lib "Tango_dll.dll" (ByVal lVRegion As Integer, ByVal dDownLevel As Double, ByVal dUppLevel As Double) As Integer
    Declare Function LS_GetVLevel Lib "Tango_dll.dll" (ByVal lVRegion As Integer, ByRef pdDownLevel As Double, ByRef pdUppLevel As Double) As Integer
    Declare Function LS_SetStopAccel Lib "Tango_dll.dll" (ByVal dXD As Double, ByVal dYD As Double, ByVal dZD As Double, ByVal dAD As Double) As Integer
    Declare Function LS_GetStopAccel Lib "Tango_dll.dll" (ByRef pdXD As Double, ByRef pdYD As Double, ByRef pdZD As Double, ByRef pdAD As Double) As Integer
    Declare Function LS_GetVersionStrInfo Lib "Tango_dll.dll" (ByVal pcVersInfo As String, ByVal lMaxLen As Integer) As Integer
    Declare Function LS_GetStatusLimit Lib "Tango_dll.dll" (ByVal pcLimit As String, ByVal lMaxLen As Integer) As Integer
    Declare Function LS_GetSecurityErr Lib "Tango_dll.dll" (ByRef pValue As Object) As Integer
    Declare Function LS_GetSecurityStatus Lib "Tango_dll.dll" (ByRef pValue As Object) As Integer
    Declare Function LS_GetDelay Lib "Tango_dll.dll" (ByRef plDelay As Integer) As Integer
    Declare Function LS_GetDistance Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
    Declare Function LS_ClearPos Lib "Tango_dll.dll" (ByVal lFlags As Integer) As Integer
    Declare Function LS_SetDigJoySpeed Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
    Declare Function LS_GetDigJoySpeed Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
    Declare Function LS_GetJoystickDir Lib "Tango_dll.dll" (ByRef plXD As Integer, ByRef plYD As Integer, ByRef plZD As Integer, ByRef plRD As Integer) As Integer
    Declare Function LS_GetJoystick Lib "Tango_dll.dll" (ByRef pbJoystickOn As Integer, ByRef pbManual As Integer, ByRef pbPositionCount As Integer, ByRef pbEncoder As Integer) As Integer
    Declare Function LS_GetJoystickWindow Lib "Tango_dll.dll" (ByRef plAValue As Integer) As Integer
    Declare Function LS_GetHandWheel Lib "Tango_dll.dll" (ByRef pbHandWheelOn As Integer, ByRef pbPositionCount As Integer, ByRef pbEncoder As Integer) As Integer
    Declare Function LS_GetBPZ Lib "Tango_dll.dll" (ByRef plAValue As Integer) As Integer
    Declare Function LS_GetBPZTrackballFactor Lib "Tango_dll.dll" (ByRef pdAValue As Double) As Integer
    Declare Function LS_GetBPZTrackballBackLash Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
    Declare Function LS_GetBPZJoyspeed Lib "Tango_dll.dll" (ByVal lAPar As Integer, ByRef pdAValue As Double) As Integer
    Declare Function LS_GetLimitControl Lib "Tango_dll.dll" (ByVal lAxis As Integer, ByRef pbActive As Integer) As Integer
    Declare Function LS_SetAutoLimitAfterCalibRM Lib "Tango_dll.dll" (ByVal lFlags As Integer) As Integer
    Declare Function LS_GetAutoLimitAfterCalibRM Lib "Tango_dll.dll" (ByRef plFlags As Integer) As Integer
    Declare Function LS_GetSwitchPolarity Lib "Tango_dll.dll" (ByRef plXP As Integer, ByRef plYP As Integer, ByRef plZP As Integer, ByRef plRP As Integer) As Integer
    Declare Function LS_GetSwitchActive Lib "Tango_dll.dll" (ByRef plXA As Integer, ByRef plYA As Integer, ByRef plZA As Integer, ByRef plRA As Integer) As Integer
    Declare Function LS_GetTVRMode Lib "Tango_dll.dll" (ByRef plXT As Integer, ByRef plYT As Integer, ByRef plZT As Integer, ByRef plRT As Integer) As Integer
    Declare Function LS_GetFactorTVR Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
    Declare Function LS_SetTVROutMode Lib "Tango_dll.dll" (ByVal lXT As Integer, ByVal lYT As Integer, ByVal lZT As Integer, ByVal lRT As Integer) As Integer
    Declare Function LS_GetTVROutMode Lib "Tango_dll.dll" (ByRef plXT As Integer, ByRef plYT As Integer, ByRef plZT As Integer, ByRef plRT As Integer) As Integer
    Declare Function LS_SetTVROutResolution Lib "Tango_dll.dll" (ByVal lX As Integer, ByVal lY As Integer, ByVal lZ As Integer, ByVal lR As Integer) As Integer
    Declare Function LS_GetTVROutResolution Lib "Tango_dll.dll" (ByRef plX As Integer, ByRef plY As Integer, ByRef plZ As Integer, ByRef plR As Integer) As Integer
    Declare Function LS_SetTVROutPitch Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
    Declare Function LS_GetTVROutPitch Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
